--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <!-- Add your code here -->
-  
-  
+  <div class="composition">
+    <div class="block-1"></div>
+    <div class="block-2"></div>
+    <div class="block-3"></div>
+    <div class="block-4"></div>
+    <div class="block-5"></div>
+    <div class="block-6"></div>
+    <div class="block-7"></div>  
+  </div>
 </body>
 </html>
 
